fix: upvote ratio z-index

--- a/src/scss/entry/experienceDetails.scss
+++ b/src/scss/entry/experienceDetails.scss
@@ -1142,7 +1142,7 @@ end of legacy code
 }
 
 #recent-upvote-ratio {
-    z-index: 99;
+    z-index: 2;
     display: flex;
     position: relative;
     gap: 0.1em;
